# ma-core

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yaml  release.yaml
doc/: acl.md  config.md  ipfs-publish.md  messaging.md  wasm.md
src/: did.rs  doc.rs  endpoint.rs  error.rs  identity.rs  inbox.rs  key.rs  lib.rs  msg.rs  multiformat.rs  outbox.rs  service.rs  topic.rs
src/acl/: mod.rs
src/config/: cli.rs  mod.rs  secrets.rs
src/ipfs/: gateway_resolver.rs  kubo.rs  mod.rs  publish.rs
src/iroh/: channel.rs  endpoint.rs  gossip.rs  mod.rs
src/kubo/: kubo.rs  mod.rs  publish.rs
